I made the registration form pull the user out of local storage. so that the user logs in.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,3 +16,15 @@
 button{
     font-size: 20px;
 }
+
+.add-comment-form{
+    visibility: hidden;
+}
+
+.registration-form{
+    visibility: hidden;
+}
+
+.login-form{
+    visibility: hidden;
+}
